--- a/index.html
+++ b/index.html
@@ -21,19 +21,37 @@
   </head>
   <body>
     <div class="container">
-      <div class="business-info">
-        <h1>Get <span> insights </span> that help your business grow.</h1>
-        <p class="main-paragraph">
-          Discover the benefits of data analytics and make better decisions
-          regarding revenue, customer experience, and overall efficiency.
-        </p>
-        <div class="stat-headings">
-          <p class="stats">10k+ <span> companies </span></p>
-          <p class="stats">314 <span> templates</span></p>
-          <p class="stats">12M+ <span> queries </span></p>
+      <div class="wrapper">
+        <div class="text-component">
+          <h1 class="title">
+            Get <span>insights</span> that help your business grow.
+          </h1>
+          <p class="subtitle">
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <div class="stat-box">
+            <div>
+              <p class="num">10k+</p>
+              <p>companies</p>
+            </div>
+            <div>
+              <p class="num">314</p>
+              <p>templates</p>
+            </div>
+            <div>
+              <p class="num">12m+</p>
+              <p>queries</p>
+            </div>
+          </div>
+        </div>
+        <div class="img-component">
+          <img
+            src="https://digitshack.com/codepen/mentor2/image-header-desktop.jpg"
+            alt=""
+          />
         </div>
       </div>
-      <div class="img-box" role="img" aria-label="Woman enjoying food"></div>
     </div>
   </body>
 </html>
